force-app/main/default/objects/Account/fields/Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission__c</fullName>
    <label>Agency Commission</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>