force-app/main/default/objects/Account/fields/Primary_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Id__c</fullName>
    <label>Primary Email Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>